@@ -642,13 +642,13 @@ expr_stmt|;
 block|}
 end_function
 begin_comment
-comment|/*!     \enum QDataStream::Version      This enum provides symbolic synonyms for the data serialization     format version numbers.      \value Qt_1_0 Version 1 (Qt 1.x)     \value Qt_2_0 Version 2 (Qt 2.0)     \value Qt_2_1 Version 3 (Qt 2.1, 2.2, 2.3)     \value Qt_3_0 Version 4 (Qt 3.0)     \value Qt_3_1 Version 5 (Qt 3.1, 3.2)     \value Qt_3_3 Version 6 (Qt 3.3)     \value Qt_4_0 Version 7 (Qt 4.0, Qt 4.1)     \value Qt_4_1 Version 7 (Qt 4.0, Qt 4.1)     \value Qt_4_2 Version 8 (Qt 4.2)     \value Qt_4_3 Version 9 (Qt 4.3)     \value Qt_4_4 Version 10 (Qt 4.4)     \value Qt_4_5 Version 11 (Qt 4.5)     \value Qt_4_6 Version 12 (Qt 4.6, Qt 4.7, Qt 4.8)     \value Qt_4_7 Same as Qt_4_6.     \value Qt_4_8 Same as Qt_4_6.     \value Qt_4_9 Same as Qt_4_6.     \value Qt_5_0 Version 13 (Qt 5.0)     \value Qt_5_1 Same as Qt_5_0.      \sa setVersion(), version() */
+comment|/*!     \enum QDataStream::Version      This enum provides symbolic synonyms for the data serialization     format version numbers.      \value Qt_1_0 Version 1 (Qt 1.x)     \value Qt_2_0 Version 2 (Qt 2.0)     \value Qt_2_1 Version 3 (Qt 2.1, 2.2, 2.3)     \value Qt_3_0 Version 4 (Qt 3.0)     \value Qt_3_1 Version 5 (Qt 3.1, 3.2)     \value Qt_3_3 Version 6 (Qt 3.3)     \value Qt_4_0 Version 7 (Qt 4.0, Qt 4.1)     \value Qt_4_1 Version 7 (Qt 4.0, Qt 4.1)     \value Qt_4_2 Version 8 (Qt 4.2)     \value Qt_4_3 Version 9 (Qt 4.3)     \value Qt_4_4 Version 10 (Qt 4.4)     \value Qt_4_5 Version 11 (Qt 4.5)     \value Qt_4_6 Version 12 (Qt 4.6, Qt 4.7, Qt 4.8)     \value Qt_4_7 Same as Qt_4_6.     \value Qt_4_8 Same as Qt_4_6.     \value Qt_4_9 Same as Qt_4_6.     \value Qt_5_0 Version 13 (Qt 5.0)     \value Qt_5_1 Version 14 (Qt 5.1)      \sa setVersion(), version() */
 end_comment
 begin_comment
 comment|/*!     \fn int QDataStream::version() const      Returns the version number of the data serialization format.      \sa setVersion(), Version */
 end_comment
 begin_comment
-comment|/*!     \fn void QDataStream::setVersion(int v)      Sets the version number of the data serialization format to \a v.      You don't \e have to set a version if you are using the current     version of Qt, but for your own custom binary formats we     recommend that you do; see \l{Versioning} in the Detailed     Description.      To accommodate new functionality, the datastream serialization     format of some Qt classes has changed in some versions of Qt. If     you want to read data that was created by an earlier version of     Qt, or write data that can be read by a program that was compiled     with an earlier version of Qt, use this function to modify the     serialization format used by QDataStream.      \table     \header \li Qt Version       \li QDataStream Version     \row \li Qt 5.0                  \li 13     \row \li Qt 4.6                  \li 12     \row \li Qt 4.5                  \li 11     \row \li Qt 4.4                  \li 10     \row \li Qt 4.3                  \li 9     \row \li Qt 4.2                  \li 8     \row \li Qt 4.0, 4.1            \li 7     \row \li Qt 3.3                  \li 6     \row \li Qt 3.1, 3.2             \li 5     \row \li Qt 3.0                  \li 4     \row \li Qt 2.1, 2.2, 2.3      \li 3     \row \li Qt 2.0                  \li 2     \row \li Qt 1.x                  \li 1     \endtable      The \l Version enum provides symbolic constants for the different     versions of Qt. For example:      \snippet code/src_corelib_io_qdatastream.cpp 5      \sa version(), Version */
+comment|/*!     \fn void QDataStream::setVersion(int v)      Sets the version number of the data serialization format to \a v.      You don't \e have to set a version if you are using the current     version of Qt, but for your own custom binary formats we     recommend that you do; see \l{Versioning} in the Detailed     Description.      To accommodate new functionality, the datastream serialization     format of some Qt classes has changed in some versions of Qt. If     you want to read data that was created by an earlier version of     Qt, or write data that can be read by a program that was compiled     with an earlier version of Qt, use this function to modify the     serialization format used by QDataStream.      \table     \header \li Qt Version       \li QDataStream Version     \row \li Qt 5.1                  \li 14     \row \li Qt 5.0                  \li 13     \row \li Qt 4.6                  \li 12     \row \li Qt 4.5                  \li 11     \row \li Qt 4.4                  \li 10     \row \li Qt 4.3                  \li 9     \row \li Qt 4.2                  \li 8     \row \li Qt 4.0, 4.1            \li 7     \row \li Qt 3.3                  \li 6     \row \li Qt 3.1, 3.2             \li 5     \row \li Qt 3.0                  \li 4     \row \li Qt 2.1, 2.2, 2.3      \li 3     \row \li Qt 2.0                  \li 2     \row \li Qt 1.x                  \li 1     \endtable      The \l Version enum provides symbolic constants for the different     versions of Qt. For example:      \snippet code/src_corelib_io_qdatastream.cpp 5      \sa version(), Version */
 end_comment
 begin_comment
 comment|/*****************************************************************************   QDataStream read functions  *****************************************************************************/
