@@ -953,8 +953,15 @@ operator|+
 literal|1
 block|,
 comment|// Qt_5_0
+name|QPalette
+operator|::
+name|ToolTipText
+operator|+
+literal|1
+block|,
+comment|// Qt_5_1
 literal|0
-comment|// add the correct value for Qt_5_1 here later
+comment|// add the correct value for Qt_5_2 here later
 block|}
 decl_stmt|;
 end_decl_stmt
